began work on tutoring.html

--- a/courses.html
+++ b/courses.html
@@ -72,9 +72,9 @@
 
             <div id="info-section" class="container my-2" style="margin-top: 0.5rem;">
                 <div class="row">
-                    <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> Info</h4>
+                    <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> info</h4>
                     <a class="my-auto px-0" href="#" style="max-width: fit-content;">
-                        <span class="badge badge-hover" style="background-color:#58cb61">Register Now</span>
+                        <span class="badge badge-hover" style="background-color:#58cb61">Register Here</span>
                     </a>
                 </div>
                 
@@ -95,7 +95,7 @@
                         <div>
                             <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Schedule</h3>
                             <p>
-                                Classes are every weekday for one or two weeks. Students will have access to materials in case they miss class.
+                                Courses are one or two weeks long, with classes every weekday. Students will have access to materials in case they miss class.
                             </p>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                         <div>
                             <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Pricing</h3>
                             <p>
-                                We aim to price at an extremely affordable rate. If you require financial aid, please let us know and we can discuss.
+                                We try to price at an extremely affordable rate. If you require financial aid, please let us know and we can discuss.
                             </p>
                         </div>
                     </div>                    
@@ -144,9 +144,9 @@
 
             <div id="math-section" class="container my-2">
                 <div class="row">
-                    <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> Math</h4>
+                    <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> math</h4>
                     <a class="my-auto px-0" href="#" style="max-width: fit-content;">
-                        <span class="badge badge-hover" style="background-color:rgb(199, 88, 255)">Register Now</span>
+                        <span class="badge badge-hover" style="background-color:rgb(199, 88, 255)">Register Here</span>
                     </a>
 
                     <div class="bs-component">
@@ -231,9 +231,9 @@
 
             <div id="cs-section" class="container my-2">
                 <div class="row">
-                    <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> Computer Science</h4>
+                    <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> computer science</h4>
                     <a class="my-auto px-0" href="#" style="max-width: fit-content;">
-                        <span class="badge badge-hover text-bg-info">Register Now</span>
+                        <span class="badge badge-hover text-bg-info">Register Here</span>
                     </a>
 
 
