--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                     </a>
                 </h3>
                 <p>
-                    We offer online lessons taught by our four instructors.
+                    We offer
+                    <a class="link-style-1-red" href="./tutoring.html" style="text-decoration: none;">online lessons</a>
+                    taught by our four instructors.
                 </p>
                 <div class="row d-flex column-gap-0">
                     <div class="col-auto my-1" style="min-height: 100%">
@@ -197,7 +199,8 @@
                             </a>
                         </h3>
                         <p>
-                            Tutoring services available upon request.
+                            <a class="link-style-1-green" href="./tutoring.html" style="text-decoration: none;">Tutoring services</a>
+                            available upon request.
                             <a class="link-style-1-purple" href="./contact.html" style="text-decoration: none;">Contact us</a> 
                             if interested.
                         </p>
