--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
                         <div class="row text-start">
                             <div class="col-lg-12">
                                 <div class="bs-component">
-                                    <div class="accordion" id="accordionExample">
+                                    <div class="accordion" id="tutoring-accordion">
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="headingOne">
                                                 <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                                     <i class="h5 my-2 mx-2 bi-person"></i><b>one-on-one lessons</b>
                                                 </button>
                                             </h2>
-                                            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
+                                            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#tutoring-accordion" style="">
                                                 <div class="accordion-body">
                                                     <strong>bold</strong> 
                                                     content 
@@ -229,7 +229,7 @@
                                                     <i class="h5 my-2 mx-2 bi-people"></i><b>small-group lessons</b>
                                                 </button>
                                             </h2>
-                                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample" style="">
+                                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#tutoring-accordion" style="">
                                                 <div class="accordion-body">
                                                     <strong>bold</strong> 
                                                     content 
@@ -244,7 +244,7 @@
                                                     <i class="h5 my-2 mx-2 bi-journal-bookmark"></i><b>subject material</b>
                                                 </button>
                                             </h2>
-                                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
                                                     <strong>bold</strong> 
                                                     content 
