--- a/tutoring.html
+++ b/tutoring.html
@@ -160,6 +160,226 @@
                 </div>
             </div>
 
+            <div class="container my-4">
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> info</h4>
+                            <a class="my-auto px-0" href="#" style="max-width: fit-content;">
+                                <span class="badge badge-hover" style="background-color:#c074ff">Contact Us</span>
+                            </a>
+                        </div>
+                        <div class="row my-3">
+                            <p>
+                                content
+                            </p>
+                            <p>
+                                <a class="link-style-1-red" href="./tutoring.html" style="text-decoration: none;">Learn more</a>
+                                about our tutors or
+                                <a class="link-style-1-purple" href="./contact.html" style="text-decoration: none;">contact us</a> 
+                                if interested.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-7">
+                        <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> subjects available</h4>
+                        <div class="accordion my-3" id="tutoring-accordion">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                        <i class="h5 my-2 mx-2 bi-plus-slash-minus"></i><b>mathematics</b>
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#tutoring-accordion" style="">
+                                    <table class="table table-striped table-bordered my-0">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th class="py-2" scope="col">Topic</th>
+                                                <th class="py-2" scope="col" style="width: 40%">Tutors</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Pre-Algebra</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Algebra</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Geometry</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Precalculus</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Trigonometry</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">AP Calculus AB/BC</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Multivariable Calculus</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Linear Algebra</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Elementary Differential Equations</th>
+                                                <td class="py-2">Max</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingTwo">
+                                    <button class="accordion-button collapsed py-2"type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        <i class="h5 my-2 mx-2 bi-laptop"></i><b>computer science</b>
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#tutoring-accordion">
+                                    <table class="table table-striped table-bordered my-0">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th class="py-2" scope="col">Topic</th>
+                                                <th class="py-2" scope="col" style="width: 40%">Tutors</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Intro to Python</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Intro to Java</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Web App Development</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Algorithms & Data Structures</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Artificial Intelligence</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Intro to Competitive Programming</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                    <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <i class="h5 my-2 mx-2 bi-lightbulb"></i><b>sciences</b>
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#tutoring-accordion">
+                                    <table class="table table-striped table-bordered my-0">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th class="py-2" scope="col">Topic</th>
+                                                <th class="py-2" scope="col" style="width: 40%">Tutors</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">AP Chemistry</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">AP Physics C Mechanics</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">AP Physics C E&M</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingFour">
+                                    <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                        <i class="h5 my-2 mx-2 bi-cpu"></i><b>engineering</b>
+                                    </button>
+                                </h2>
+                                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#tutoring-accordion">
+                                    <table class="table table-striped table-bordered my-0">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th class="py-2" scope="col">Topic</th>
+                                                <th class="py-2" scope="col" style="width: 40%">Tutors</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">CAD / Fusion 360</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Analog / Digital Electronics</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Arduino</th>
+                                                <td class="py-2"></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingFive">
+                                    <button class="accordion-button collapsed py-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                        <i class="h5 my-2 mx-2 bi-pencil-square"></i><b>exam prep</b>
+                                    </button>
+                                </h2>
+                                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#tutoring-accordion">
+                                    <table class="table table-striped table-bordered my-0">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th class="py-2" scope="col">Topic</th>
+                                                <th class="py-2" scope="col" style="width: 40%">Tutors</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">SAT / PSAT</th>
+                                                <td class="py-2">all tutors</td>
+                                            </tr>
+                                            <tr class="table-secondary">
+                                                <th class="py-2" scope="row">Cambridge TMUA / STEP</th>
+                                                <td class="py-2">Max</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div id="footer" class="container">
