--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="row">
                     <div class="col-6" style="min-width: 15.5em">
                         <div class="card user-select-none" style="min-width: 100%; overflow:hidden">
-                            <img class="card-img" src="https://media.discordapp.net/attachments/1219373250312929370/1250581154751316008/Screenshot_20240612-184222.png?ex=666b75f5&is=666a2475&hm=6338b19cd2044a7782eefa7c0f2af2b0c9ef2fdd47985891ddf8991ea2121f47&=&format=webp&quality=lossless&width=1326&height=978" alt="lecture-image">
+                            <img class="card-img" src="./static/assets/lecture.png" alt="lecture-image">
                         </div>
                     </div>
                     <div class="col" style="min-width: 15.5em">
