--- a/tutoring.html
+++ b/tutoring.html
@@ -162,7 +162,7 @@
 
             <div class="container my-4">
                 <div class="row">
-                    <div class="col">
+                    <div class="col" style="min-width: 15em;">
                         <div class="row">
                             <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> info</h4>
                             <a class="my-auto px-0" href="#" style="max-width: fit-content;">
@@ -182,7 +182,7 @@
                         </div>
                     </div>
 
-                    <div class="col-7">
+                    <div class="col-7"  style="min-width: 20em;">
                         <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> subjects available</h4>
                         <div class="accordion my-3" id="tutoring-accordion">
                             <div class="accordion-item">
