--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                                     <i class="h5 my-2 mx-2 bi-person"></i><b>one-on-one lessons</b>
                                                 </button>
                                             </h2>
-                                            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#tutoring-accordion" style="">
+                                            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
                                                     <strong>bold</strong> 
                                                     content 
@@ -229,7 +229,7 @@
                                                     <i class="h5 my-2 mx-2 bi-people"></i><b>small-group lessons</b>
                                                 </button>
                                             </h2>
-                                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#tutoring-accordion" style="">
+                                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
                                                     <strong>bold</strong> 
                                                     content 
